--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Copy and Paste Example For Secure Coding
+author: Michael Hegglin
+email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The purpose is to make easy copy and paste examples of secure methods 
+  in many languages.  For example you want to execute a shell command in C++,
+  however, you don't know how to do that securely.  This blog is here to
+  help!  Most of the examples are taken from books, and cleaned up to 
+  run with copy and pasting.
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
