--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Copy and Paste Example For Secure Coding
 author: Michael Hegglin
-email: 
+ 
 description: > # this means to ignore newlines until "baseurl:"
   The purpose is to make easy copy and paste examples of secure methods 
   in many languages.  For example you want to execute a shell command in C++,
@@ -8,8 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
   help!  Most of the examples are taken from books, and cleaned up to 
   run with copy and pasting.
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  hegglinmichael # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
